# moonforge-cli

./: .flake8  CHANGELOG.md  README.md  REUSE.toml  moonforge.py  pyproject.toml
.github/workflows/: python-lint.yml  reuse-lint.yml
LICENSES/: MIT.txt
src/moonforgecli/: __init__.py  build.py  config.py  container.py  feature.py  init.py  kas.py  list_features.py  list_machines.py  log.py  machine.py  moonforgemain.py  project.py  repo.py  shell.py  term.py  utils.py
src/moonforgecli/features/: __init__.py  docker.py  graphics_weston.py  graphics_wpe.py  podman.py  rauc.py  rauc_simple.py
src/moonforgecli/machines/: __init__.py  qemu.py  raspberrypi5.py
